Fix wingtip visibility

--- a/html/stylesheets/src/layouts/_home.scss
+++ b/html/stylesheets/src/layouts/_home.scss
@@ -66,7 +66,7 @@
     margin: 0 auto;
     text-align: left;
     position: relative;
-/*    visibility:hidden;*/
+    z-index: 1; /* Otherwise we lose the wingtips */    
   }
   
   .main > header{
